Fix HTML structure and formatting

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 </head>
 <body>
 
-<h1>Monitoreo de pH - Agua Inteligente</h1>
+<h1>Monitoreo de pH</h1>
+
 
 <table id="tabla"></table>
 
@@ -77,3 +78,4 @@
 
 </body>
 </html>
+
