Rename page title from 'Monitoreo de pH' to 'CoffeeWet'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>☕🦎 Monitoreo de pH</title>
+    <title>☕🦎 CoffeeWet</title>
 
     <style>
         body {
@@ -100,9 +100,6 @@
     <table id="tabla"></table>
 
 </div>
-
-<footer>
-    Proyecto Agua Inteligente | Ingeniería Multimedia | 2026
 </footer>
 
 <script>
@@ -137,3 +134,4 @@
 
 </body>
 </html>
+
