Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
 
 <header>
-    ☕🦎 Monitoreo de pH
+    ☕🦎 CoffeeWet
 </header>
 
 <div class="container">
@@ -134,4 +134,5 @@
 
 </body>
 </html>
+
 
